# rarity

./: Cargo.toml  README.md
crates/rarity-engine/: Cargo.toml
crates/rarity-engine/src/: error.rs  graph.rs  lib.rs  message_collector.rs  player.rs
crates/rarity-engine/src/buffer/: audio.rs  message.rs  mod.rs
crates/rarity-engine/src/node/: mod.rs  parameter.rs  raw.rs
crates/rarity-node/: Cargo.toml
crates/rarity-node/src/: digital_overdrive.rs  lib.rs  simple_saw.rs  wave_fold.rs
examples/: mock_graph.rs
src/: lib.rs
